# beaverNES

./: .gitignore  CMakeLists.txt  README.md  cartridge.c  cartridge.h  compareNesTest.py  controller.c  controller.h  controller_test.c  cpu_test  cpu_test.c  input.c  input.h  input_test.c  main  main.c  makefile  mapper.c  mapper.h  mapper_0.c  mapper_2.c  ppu.c  ppu_test  rom_loader.c  rom_loader.h  test_apu.c  test_apu.h
.github/workflows/: ci.yml  mapper.c
Rom_loader/include/: cartridge.h  mapper.h  rom_loader.h
Rom_loader/src/: cartridge.c  mapper.c  mapper_0.c  mapper_2.c  rom_loader.c
apu/include/: apu.h  test_apu.h
apu/src/: apu.c  test_apu.c
beaverNES-anjelica-dev/: README.md  cartridge.c  main.c  mapper.c  mapper.h  rom_loader.c  rom_loader.h
beaverNES-anjelica-dev/.github/workflows/: ci.yml
controller/src/: controller.c
cpu/include/: bus.h  cpu.h  opcodes.h
cpu/src/: bus.c  cpu.c  memory.c
include/: bus.h  cpu.h  memory.h  opcodes.h
ppu/include/: ppu.h
ppu/src/: ppu.c
src/: apu.c  apu.h  bus.c  cpu.c  main.c  opcodes.c
src/tests/: test_cpu.c
ui/: ui_button.c  ui_button.h  ui_element.h  ui_text.c  ui_text.h  ui_window.c  ui_window.h
